--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,21 @@
 html,body{
   height: 100vh;
   width: 100%;
+  padding: 20px;
   background-color: #ddd;
+ 
 }
 
+.app{
+  display: flex;
+  /* flex-wrap: wrap; */
+  justify-content: space-between;
+  width: 1000px;
+  max-height: 350px;
+  background-color: red;
+  overflow: scroll;
+/* padding: 0 40px; */
+}
 .parent{
   display: flex;
   flex-direction: column;
@@ -52,6 +64,7 @@ html,body{
   justify-content: center;
   border:1px solid #aaa;
   padding: 5px 8px;
+  gap: 5px;
   background-color: transparent;
   border-radius: 4px;
   -webkit-border-radius: 4px;
